--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@lottiefiles/react-lottie-player": "^3.5.3",
     "autoprefixer": "^10.4.19",
     "firebase": "^10.10.0",
     "framer-motion": "^11.0.24",
